2011-06-27  Andreas Schwab  <schwab@redhat.com>

	* iconvdata/gb18030.c (BODY for TO_LOOP): Fix encoding of non-BMP
	two-byte characters.

2011-06-27  Roland McGrath  <roland@hack.frob.com>

	* configure.in (NO_CTORS_DTORS_SECTIONS): Give this check its own
	AC_CACHE_CHECK invocation.
	* configure: Regenerated.

	* elf/soinit.c (__CTOR_LIST__, __DTOR_LIST__): Add used attribute.

2011-06-27  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12350]
	* nscd/aicache.c (addhstaiX):  Restore only RES_USE_INET6
	bit from old_res_options.

	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-servicescache.c): Define.

	* inet/getnetgrent_r.c (innetgr): Minimal cleanup, use correct return
	value type for setfct.

2011-06-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/getsysstats.c (__get_nprocs): Use
	__gettimeofday instead of gettimeofday.

2011-06-26  Ulrich Drepper  <drepper@gmail.com>

	* elf/Makefile (all-built-dso): No need to check linkobj/libc.so.

2011-06-24  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/strcpy-sse2.S (RETURN): Fix a typo.

	* sysdeps/i386/i686/multiarch/strcpy-ssse3.S: Correct unwind
	info.

2011-06-22  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strcpy-ssse3 strncpy-ssse3 stpcpy-ssse3 stpncpy-ssse3
	strcpy-sse2-unaligned strncpy-sse2-unaligned
	stpcpy-sse2-unaligned stpncpy-sse2-unaligned.
	* sysdeps/x86_64/multiarch/stpcpy-sse2-unaligned.S: New file.
	* sysdeps/x86_64/multiarch/stpcpy-ssse3.S: New file.
	* sysdeps/x86_64/multiarch/stpncpy-sse2-unaligned.S: New file.
	* sysdeps/x86_64/multiarch/stpncpy-ssse3.S: New file.
	* sysdeps/x86_64/multiarch/strcpy-sse2-unaligned.S: New file.
	* sysdeps/x86_64/multiarch/strcpy-ssse3.S: New file.
	* sysdeps/x86_64/multiarch/strncpy-sse2-unaligned.S: New file.
	* sysdeps/x86_64/multiarch/strncpy-ssse3.S: New file.
	* sysdeps/x86_64/multiarch/strcpy.S: Remove strcpy with SSSE3.
	(STRCPY): Support SSE2 and SSSE3 versions.
