@@ -274,13 +274,6 @@ AC_ARG_ENABLE([multi-arch],
 	      [multi_arch=$enableval],
 	      [multi_arch=default])
 
-AC_ARG_ENABLE([experimental-malloc],
-	      AC_HELP_STRING([--enable-experimental-malloc],
-			     [enable experimental malloc features]),
-	      [experimental_malloc=$enableval],
-	      [])
-AC_SUBST(experimental_malloc)
-
 AC_ARG_ENABLE([nss-crypt],
 	      AC_HELP_STRING([--enable-nss-crypt],
 			     [enable libcrypt to use nss]),
