@@ -1,4 +1,4 @@
-# Copyright (C) 1991-1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009
+# Copyright (C) 1991-1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009, 2011
 # Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
@@ -125,9 +125,7 @@ endif
 
 tst-mcheck-ENV = MALLOC_CHECK_=3
 
-ifeq ($(experimental-malloc),yes)
 CPPFLAGS-malloc.c += -DPER_THREAD -DATOMIC_FASTBINS
-endif
 # Uncomment this for test releases.  For public releases it is too expensive.
 #CPPFLAGS-malloc.o += -DMALLOC_DEBUG=1
 
